[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ariadne"
version = "0.25.0"
description = "Ariadne is a Python library for implementing GraphQL servers."
authors = [{ name = "Mirumee Software", email = "hello@mirumee.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "graphql-core>=3.2.0,<3.2.7",
  "starlette>0.17,<1.0",
  "typing_extensions>=3.6.0",
]

[project.optional-dependencies]
dev = ["black<25", "mypy", "pylint"]
test = [
  "pytest",
  "pytest-asyncio",
  "pytest-benchmark",
  "pytest-cov",
  "pytest-mock",
  "freezegun",
  "syrupy",
  "werkzeug",
  "httpx",
  "opentracing",
  "opentelemetry-api",
  "python-multipart>=0.0.5",
  "aiodataloader",
  "graphql-sync-dataloaders;python_version>\"3.7\"",
]
asgi-file-uploads = ["python-multipart>=0.0.5"]
tracing = ["opentracing"]
telemetry = ["opentelemetry-api"]

[project.urls]
"Homepage" = "https://ariadnegraphql.org/"
"Repository" = "https://github.com/mirumee/ariadne"
"Bug Tracker" = "https://github.com/mirumee/ariadne/issues"
"Community" = "https://github.com/mirumee/ariadne/discussions"
"Twitter" = "https://twitter.com/AriadneGraphQL"

[tool.hatch.build]
include = [
  "ariadne/**/*.py",
  "ariadne/**/*.html",
  "ariadne/**/*.graphql",
  "ariadne/py.typed",
]
exclude = [
  "tests",
]

[tool.hatch.envs.default]
features = ["dev", "test"]

[tool.hatch.envs.default.scripts]
test = "coverage run -m pytest"
check = [
    "pylint --py-version=3.8 ariadne tests",
    "mypy ariadne tests_mypy --ignore-missing-imports --check-untyped-defs",
    "black --check .",
    "hatch test -a -p",
    "hatch test --cover",
]

[tool.hatch.envs.hatch-test]
features = ["dev", "test"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | snapshots
)/
'''

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
source = ["ariadne", "tests"]
